# netz39-avr_101

./: .gitignore  README.md
alex_p110_t85/: .gitignore  Makefile  README.md  p110.c
alex_rgb_attiny25/: Makefile.bb  Makefile.flo  Makefile.sk  README.md  gamma.h  gamma.pl  rgb_blink.c  rgb_button.c  rgb_pwm_1.c  rgb_pwm_2.c  rgb_pwm_3.c  rgb_pwm_4.c  rgb_pwm_simple.c  set_fuse_16mhz.sh  set_fuse_default.sh
hsv2rgb/: CMakeLists.txt  Doxyfile.in  NOTES.md  README.md
hsv2rgb/src/: CMakeLists.txt  hsv2rgb.c  hsv2rgb.h
hsv2rgb/test/: .gitignore  CMakeLists.txt  test_hsv2rgb.c
hsv2rgb/test/qhsv2rgb/: dialog.cpp  dialog.h  dialog.ui  main.cpp  qhsv2rgb.pro
slides/: NOTES.md  chapter_1.tex  chapter_2.tex  de_kapitel_2.tex  ohm2013.tex
